--- a/dashboard/dashboard_export_20241127T135608/datasets/Clickhouse/f_aggregate_candidate_results.yaml
+++ b/dashboard/dashboard_export_20241127T135608/datasets/Clickhouse/f_aggregate_candidate_results.yaml
@@ -1,4 +1,4 @@
-table_name: query_tps
+table_name: f_aggregate_candidate_results
 main_dttm_col: null
 description: null
 default_endpoint: null
@@ -6,10 +6,7 @@ offset: 0
 cache_timeout: null
 catalog: null
 schema: default
-sql: "SELECT\n    countIf(suara_sah = 0) AS without_suara,\n    countIf(suara_sah\
-  \ != 0) AS with_suara,\n    count(*) AS total_count\nFROM\n(\n    SELECT DISTINCT\n\
-  \        location_id,\n        argMax(suara_sah, recording_time) AS suara_sah\n\
-  \    FROM f_raw_results\n    GROUP BY location_id\n)"
+sql: null
 params: null
 template_params: null
 filter_select_enabled: true
@@ -17,7 +14,7 @@ fetch_values_predicate: null
 extra: null
 normalize_columns: false
 always_filter_main_dttm: false
-uuid: ce25c92b-bd44-43e0-b523-51c08871528a
+uuid: b7b5f9af-018d-4224-8dad-e6b93d983dce
 metrics:
 - metric_name: count
   verbose_name: COUNT(*)
@@ -26,45 +23,80 @@ metrics:
   description: null
   d3format: null
   currency: null
-  extra:
-    warning_markdown: ''
+  extra: null
   warning_text: null
 columns:
-- column_name: without_suara
+- column_name: nama_cab
   verbose_name: null
   is_dttm: false
   is_active: true
-  type: UInt64
+  type: LOWCARDINALITY(STRING)
   advanced_data_type: null
   groupby: true
   filterable: true
   expression: null
   description: null
   python_date_format: null
-  extra: {}
-- column_name: with_suara
+  extra: null
+- column_name: candidate_code
   verbose_name: null
   is_dttm: false
   is_active: true
-  type: UInt64
+  type: LOWCARDINALITY(STRING)
   advanced_data_type: null
   groupby: true
   filterable: true
   expression: null
   description: null
   python_date_format: null
-  extra: {}
-- column_name: total_count
+  extra: null
+- column_name: nama_kec
   verbose_name: null
   is_dttm: false
   is_active: true
-  type: UInt64
+  type: LOWCARDINALITY(STRING)
   advanced_data_type: null
   groupby: true
   filterable: true
   expression: null
   description: null
   python_date_format: null
-  extra: {}
+  extra: null
+- column_name: nama_kel
+  verbose_name: null
+  is_dttm: false
+  is_active: true
+  type: LOWCARDINALITY(STRING)
+  advanced_data_type: null
+  groupby: true
+  filterable: true
+  expression: null
+  description: null
+  python_date_format: null
+  extra: null
+- column_name: nama_prov
+  verbose_name: null
+  is_dttm: false
+  is_active: true
+  type: LOWCARDINALITY(STRING)
+  advanced_data_type: null
+  groupby: true
+  filterable: true
+  expression: null
+  description: null
+  python_date_format: null
+  extra: null
+- column_name: total_votes
+  verbose_name: null
+  is_dttm: false
+  is_active: true
+  type: UINT64
+  advanced_data_type: null
+  groupby: true
+  filterable: true
+  expression: null
+  description: null
+  python_date_format: null
+  extra: null
 version: 1.0.0
 database_uuid: b7054a31-cd10-4909-9552-c52fe5d9f14b
